[gd_scene load_steps=4 format=2]

[ext_resource path="res://gfx/effect/flash_tile.png" type="Texture" id=1]
[ext_resource path="res://core/camera/room_camera.gd" type="Script" id=2]
[ext_resource path="res://gfx/effect/fade_tile.png" type="Texture" id=3]

[node name="RoomCamera" type="Camera2D"]
anchor_mode = 0
current = true
script = ExtResource( 2 )

[node name="FlashSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 480, 320 )
scale = Vector2( 30, 20 )
texture = ExtResource( 1 )

[node name="FadeSprite" type="Sprite" parent="."]
position = Vector2( 480, 320 )
scale = Vector2( 30, 20 )
texture = ExtResource( 3 )

[node name="ShakeLength" type="Timer" parent="."]
one_shot = true

[node name="ShakePeriod" type="Timer" parent="."]

[node name="Tweener" type="Tween" parent="."]

[node name="Node2D" type="Node2D" parent="."]
